<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hourglass"
    android:isScrollContainer="true" xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
            <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AlarmDetailsActivity" >
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="689dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".AlarmDetailsActivity" >

        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_time_picker"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/details_alarm_name" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/toggleButton2" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="@string/details_repeat_weekly" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_weekly" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider1"
            android:checked="true"
            android:text="@string/details_sunday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_monday"
            android:layout_below="@+id/alarm_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
            android:layout_below="@+id/alarm_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
            android:layout_below="@+id/alarm_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_thursday"
            android:layout_below="@+id/alarm_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <com.ok.mathlightalarm.CustomSwitch
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_friday"
            android:layout_below="@+id/alarm_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/toggleButton1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"
                android:text="@string/details_1" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/details_2" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/details_3" />
  
        </RadioGroup>

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/divider3"
            android:layout_below="@+id/radioGroup1"
           />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/divider3"
            android:layout_below="@+id/divider3" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/toggleButton1"
            android:layout_alignBottom="@+id/toggleButton1"
            android:layout_alignLeft="@+id/divider3"
            android:text="@string/mathematic"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup1"
            android:layout_alignTop="@+id/toggleButton2"
            android:text="@string/details_Flash"
            android:textSize="25sp" />

    </RelativeLayout>

</ScrollView>